--- a/src/components/aboutMe/aboutMe.css
+++ b/src/components/aboutMe/aboutMe.css
@@ -1,3 +1,72 @@
 .AboutMe {
     background-color: var(--bg-2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.about__header {
+    font-size: 4rem;
+    margin: 30px 0px;
+    color: var(--white);
+}
+
+.about__image__container {
+    display: flex;
+    align-items: center;
+}
+
+.code {
+    width: 150px;
+}
+
+.travel {
+    width: 150px;
+}
+
+.art {
+    width: 100px;
+}
+
+.about__image, .hobby__desc {
+    width: 200px;
+    margin: 0px 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.about__image> img {
+    filter: invert();
+}
+
+.about__hobby {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.hobby__desc {
+    background-color: var(--accent-magenta);
+    border-radius: 15px;
+    padding: 10px;
+}
+
+.hobby__desc > h2 {
+    color: var(--white);
+    margin-bottom: 25px;
+    font-weight: 500;
+}
+
+.hobby__desc > h4 {
+    color: var(--white);
+    font-weight: 400;
+}
+
+@media (max-width: 1000px) {
+    .about__image, .hobby__desc {
+        margin: 0px 20px;
+    }
 }
