--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -20,7 +20,7 @@ a:link {
 .image__container {
     width: 700px;
     height: 700px;
-    background-color: var(--me-bg);
+    background-color: var(--accent-magenta);
     border-radius: 50%;
     display: flex;
     align-items: flex-end;
@@ -59,7 +59,7 @@ a:link {
 
 .intro__jobs {
     font-size: inherit;
-    color: var(--me-bg);
+    color: var(--accent-magenta);
 }
 
 .intro__a {
