--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -9,45 +9,33 @@
     transition: 300ms ease;
 }
 
-.container {
-    padding: 10px 30px;
+.nav__container {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.logo__container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
 }
 
 .logo {
-    font-size: 40px;
-    font-weight:900;
-    text-decoration: none;
-    color: inherit;
-    margin-right: 40px;
+    width: 70px;
+    filter: invert();
 }
 
-.item__container {
-    display: flex;
-    align-items: center;
-    margin-left: 30px;
-}
-
-.icon {
-    font-size: 18px;
-    margin-right: 5px;
-}
-
-.left__span {
-    font-size: 15px;
-    font-weight: 500;
-}
-
-.left {
-    display: flex;
-    align-items: center;
+.logo__desc {
+    font-size: 2em;
+    font-weight: 300;
 }
 
 .hamburger {
+    position: absolute;
+    right: 20px;
+    top: 20px;
     width: 32px;
-    height: 25px;
+    height: 24px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
