--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -14,6 +14,8 @@
 
 .projects__country {
     position: relative;
+    width: 90vw;
+    max-width: 1000px;
     display: grid;
     grid-template-rows: 1fr 3fr;
     margin-top: 50px;
@@ -71,7 +73,8 @@
 }
 
 .answer__container > img {
-    height: 300px;
+    height: 210px;
+    max-width: 600px;
     margin-top: 30px;
     filter: invert();
 }
@@ -79,8 +82,9 @@
 .answer__input {
     position: relative;
     margin-top: 30px;
+    margin-bottom: 20px;
     height: 45px;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     width: 150px;
     text-align: center;
     background-color: transparent;
@@ -98,4 +102,29 @@
 
 .answer__input:focus {
     width: 180px;
+}
+
+.answer__skip {
+    width: 70px;
+    height: 35px;
+    font-size: 1rem;
+    font-weight: 500;
+    border: none;
+    background-color: var(--faded-white);
+    color: var(--white);
+    transition: 300ms ease-in-out;
+}
+
+.answer__skip:hover {
+    box-shadow: inset 100px 0px 0px 0px var(--faded-white-hover);
+}
+
+.anim {
+    background-color: red;
+}
+
+@media (max-width: 1000px) {
+    .answer__container > img {
+        max-width: calc(90vw - 100px);
+    }
 }
