--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -9,13 +9,12 @@
 
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     transition: all 300ms ease;
 }
 
 .menu__active {
-    transform: translateX(-300px);
+    transform: translateX(-240px);
 }
 
 .menu__list {
@@ -30,14 +29,16 @@
 
 .menu__list > li {
     margin-bottom: 25px;
-}
-
-.menu__list > li:hover {
-    font-weight: 500;
+    margin-left: 30px;
 }
 
 .menu__list > li > a {
     font-size: inherit;
     color: white;
     text-decoration: none;
+    transition: 25ms ease;
+}
+
+.menu__list > li > a:hover {
+    color: var(--accent-magenta);
 }
