--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -6,7 +6,7 @@
 }
 
 .header__container {
-    margin-top: 20px;
+    margin-top: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -60,5 +60,11 @@
 @media (max-width: 1000px) {
     .skills__grid {
         column-gap: 150px;
+    }
+}
+
+@media (max-width: 700px) {
+    .skills__grid {
+        column-gap: 50px;
     }
 }
