--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,22 @@
   --main-color-active: rgb(19, 24, 41);
   --bg-1: rgb(26, 32, 54);
   --bg-2: rgb(30, 38, 65);
-  --bg-3: rgb(49, 58, 94);
+  --bg-3: rgb(48, 56, 90);
+  --bg-4: rgb(19, 25, 44);
+  --bg-5: rgb(58, 67, 106);
+  --bg-6: rgb(40, 49, 78);
   --white: white;
   --faded-white: rgba(255, 255, 255, 0.05);
   --faded-white-hover: rgba(255, 255, 255, 0.15);
   --faded-white-2: rgba(255, 255, 255, 0.25);
+  --faded-white-3: rgba(255, 255, 255, 0.6);
   --white-active: rgb(147, 147, 147);
   --accent-magenta: rgb(171, 110, 179);
   --scrollbar: rgba(81, 104, 152, 0.4);
   --scrollbar-hover: rgba(87, 102, 134, 0.6);
   --scrollbar-track: rgb(41, 58, 83);
+
+  --contact-padding: 10px 20px;
 }
 
 ::-webkit-scrollbar {
