--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -214,14 +214,14 @@
     transform: scale(0);
     width: 350px;
     height: 300px;
-    background-color: var(--white);
+    background-color: var(--bg-1);
     transition: 1s all;
     animation: Checkmark 1.5s;
 }
 
 @keyframes Checkmark {
     0% { transform: scale(1); width: 300px; }
-    20% { transform: scale(1); width: 200px; }
+    25% { transform: scale(1); width: 200px; }
     100% { transform: scale(1); width: 0px; }
 }
 
