--- a/src/components/aboutMe/aboutMe.css
+++ b/src/components/aboutMe/aboutMe.css
@@ -1,107 +1,52 @@
 .AboutMe {
-    background-color: var(--bg-2);
+    position: relative;
+    isolation: isolate;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 100px 0px;
+}
+
+.AboutMe::after {
+    content: '';
+    background-image: var(--gradient-1);
+    box-shadow: 0px 0px 100px 10px var(--faded-black);
+    position: absolute;
+    inset: 0;
+    transform: skewY(var(--bg-skew-angle));
+    z-index: -1;
 }
 
 .about__header {
     font-size: 4rem;
     margin: 30px 0px;
+    margin-right: 65px;
     color: var(--white);
+    rotate: -5deg;
 }
 
-.about__image__container {
+.main__width {
     display: flex;
-    align-items: center;
-    padding-top: 20px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    background-color: var(--bg-3);
+    flex-direction: row;
+    rotate: -5deg;
 }
 
-.code {
-    width: 150px;
-}
-
-.travel {
-    width: 150px;
-}
-
-.art {
-    width: 100px;
-}
-
-.about__image {
-    width: 200px;
-    margin: 0px 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transition: 500ms ease;
-}
-
-.about__image > img {
-    filter: invert();
-}
-
-.about__hobby {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px 0px;
-    margin-bottom: 60px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    background-color: var(--bg-3);
-}
-
-.hobby__desc {
-    position: relative;
-    display: flex;
-    width: 200px;
-    height: 340px;
-    margin: 0px 100px;
-    margin-bottom: 50px;
-    background-color: transparent;
-    border: 3px solid var(--white);
-    border-radius: 10px;
-    transition: 500ms ease;
-}
-
-.hobby__desc > h2 {
-    position: absolute;
-    top: 30px;
-    left: 20px;
-    font-size: 2rem;
-    color: var(--white);
-    margin-bottom: 25px;
-    font-weight: 500;
-}
-
-.hobby__desc > h4 {
-    padding-right: 25px;
-    position: absolute;
-    top: 90px;
-    left: 20px;
-    font-size: 1.25rem;
-    color: var(--white);
-    font-weight: 400;
-}
-
-.width__710px {
+.main__width > div {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 30px;
+    margin: 0px 30px 50px 30px;
     padding-bottom: 0px;
-    margin-bottom: 50px;
     border-radius: 10px;
     background-color: var(--bg-3);
 }
 
-.width__710px > h2 {
+.main__width > div > img {
+    filter: invert();
+}
+
+.main__width > div > h2 {
     text-align: center;
     font-size: 2rem;
     font-weight: 500;
@@ -109,15 +54,7 @@
     color: var(--white);
 }
 
-.width__710px > img {
-    filter: invert();
-}
-
-.travel__image__710px, .art__image__710px {
-    margin-bottom: 30px;
-}
-
-.width__710px > h4 {
+.main__width > div > h4 {
     width: 150px;
     text-align: center;
     font-size: 1.2rem;
@@ -126,11 +63,34 @@
     color: var(--white);
 }
 
-@media (max-width: 1000px) {
-    .about__image, .hobby__desc { margin: 0px 20px; }
-    .hobby__desc { margin-bottom: 50px; }
+.friends {
+    transform: translateY(-20px);
+}
+
+.friends, .travel {
+    width: 150px;
+}
+
+.art {
+    width: 105px;
+}
+
+.travel__label {
+    margin-top: 20px;
+}
+
+.art__label {
+    margin-top: 26px;
+}
+
+.travel__image, .art__image {
+    margin-bottom: 30px;
 }
 
 @media (max-width: 710px) {
-    .about__image__container, .about__hobby { flex-direction: column; }
+    .main__width { flex-direction: column; }
+}
+
+@media (max-width: 550px) {
+    .about__header { font-size: 3rem; }
 }
