--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -134,3 +134,19 @@
         max-width: calc(90vw - 100px);
     }
 }
+
+@media (max-width: 550px) {
+    .projects__header {
+        font-size: 3rem;
+    }
+
+    .country__desc > h2 {
+        font-size: 2.25rem;
+        text-align: center;
+    }
+
+    .country__desc > h4 {
+        font-size: 1.5rem;
+        text-align: center;
+    }
+}
