--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -64,7 +64,13 @@
 }
 
 @media (max-width: 700px) {
+    .skills__header {
+        font-size: 2.8rem;
+    }
+    
     .skills__grid {
-        column-gap: 50px;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+        column-gap: 10px;
     }
 }
