--- a/src/components/aboutMe/aboutMe.css
+++ b/src/components/aboutMe/aboutMe.css
@@ -10,7 +10,7 @@
 .AboutMe::after {
     content: '';
     background-image: var(--gradient-1);
-    box-shadow: 0px 0px 100px 10px var(--faded-black);
+    box-shadow: 0px 0px 200px 10px var(--faded-black);
     position: absolute;
     inset: 0;
     transform: skewY(var(--bg-skew-angle));
@@ -18,6 +18,7 @@
 }
 
 .about__header {
+    position: relative;
     font-size: 4rem;
     margin: 30px 0px;
     margin-right: 65px;
@@ -40,6 +41,11 @@
     padding-bottom: 0px;
     border-radius: 10px;
     background-color: var(--bg-3);
+    transition: 250ms ease-out;
+}
+
+.main__width > div:hover {
+    background-color: var(--bg-6);
 }
 
 .main__width > div > img {
@@ -89,6 +95,8 @@
 
 @media (max-width: 710px) {
     .main__width { flex-direction: column; }
+    .about__header { margin-right: 0; }
+    .main__width, .about__header { rotate: 0deg; }
 }
 
 @media (max-width: 550px) {
