--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,19 @@
 
   --contact-padding: 15px 20px;
   --bg-skew-angle: -5deg;
+  --fade-in: cubic-bezier(.17, 1.07, .72, .9);
 }
 
 body {
   background-color: var(--bg-1);
+}
+
+img {  
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 ::-webkit-scrollbar {
@@ -64,4 +73,22 @@ select:-webkit-autofill:focus {
   -webkit-text-fill-color: var(--white);
   -webkit-box-shadow: 0px 0px 0px 100px var(--bg-6) inset;
   transition: background-color 500ms ease-in-out 0s;
+}
+
+::selection {
+  background: #2c508e;
+}
+
+::-moz-selection {
+  background: #2c508e;
+}
+
+@keyframes HeaderFade {
+  0% {
+      transform: scaleX(0);
+  }
+
+  100% {
+      transform: scaleX(1);
+  }
 }
