--- a/src/index.css
+++ b/src/index.css
@@ -85,10 +85,12 @@ select:-webkit-autofill:focus {
 
 @keyframes HeaderFade {
   0% {
+      opacity: 0;
       transform: scaleX(0);
   }
 
   100% {
       transform: scaleX(1);
+      opacity: 1;
   }
 }
