--- a/src/components/organizations/organizations.css
+++ b/src/components/organizations/organizations.css
@@ -6,11 +6,27 @@
     background-color: var(--bg-1);
     color: var(--white);
     text-align: center;
+    padding-top: 40px;
 }
 
 .organizations__header {
     font-size: 4rem;
-    padding: 40px 0px;
+}
+
+.organizations__header__underline {
+    height: 5px;
+    width: 425px;
+    opacity: 0;
+    transform: scaleX(0);
+    transition: 750ms ease;
+    background-color: var(--white);
+    margin-bottom: 50px;
+    margin-top: 5px;
+}
+
+.orgs__visible {
+    opacity: 1;
+    transform: scaleX(1);
 }
 
 .organizations__container {
@@ -26,6 +42,17 @@
     padding: 30px;
     border-radius: 10px;
     background-color: var(--bg-4);
+    transition: 500ms ease;
+}
+
+.ieee {
+    opacity: 0;
+    transform: translateX(-150px);
+}
+
+.ieee__visible {
+    opacity: 1;
+    transform: translateX(0px);
 }
 
 .ieee__logo {
@@ -57,6 +84,16 @@
 
 .ieee__logo:hover, .ecess__logo:hover {
     filter: brightness(100%);
+}
+
+.ecess {
+    opacity: 0;
+    transform: translateX(150px);
+}
+
+.ecess__visible {
+    opacity: 1;
+    transform: translateX(0px);
 }
 
 .ecess__logo {
